--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <body>
         <h1>Главная страница</h1>
         <h2>Сайт в разработке!</h2>
+        <h3>Черная пятница</h3>
     </body>
 </html>
