--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <h1>Главная страница</h1>
         <h2>Сайт в разработке!</h2>
         <h3>Черная пятница</h3>
+        <h4>Скидки</h4>
     </body>
 </html>
