--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <body>
         <h1>Главная страница</h1>
         <h2>Сайт в разработке!</h2>
-        <h4>Скидки</h4>
+        <h3>Работают специалисты</h3>
     </body>
 </html>
